--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "version": "0.0.1",
   "name": "hyperjs",
   "private": true,
-  "main":"dist/hyperjs.min.js",
+  "main": "dist/hyperjs.min.js",
   "author": {
     "name": "Fredrik Olsson",
     "email": "fredrik.olsson2@outlook.com"
   },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/fredolss/hyperjs.git"
+  },
+  "homepage": "https://github.com/fredolss/hyperjs",
   "license": "MIT",
   "scripts": {
     "test": "gulp test",
@@ -22,13 +27,14 @@
     "HAL"
   ],
   "devDependencies": {
+    "@types/mocha": "^2.2.48",
     "core-js": "^2.5.3",
     "gulp": "^3.9.1",
-    "jasmine-core": "^3.1.0",
     "karma": "2.0.0",
-    "karma-jasmine": "^1.1.1",
+    "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "minify-stream": "^1.1.0",
+    "mocha": "^5.0.4",
     "sinon": "^4.4.2",
     "tsify": "^3.0.4",
     "typescript": "2.7.2",
