--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "core-js": "^2.5.3",
     "gulp": "^3.9.1",
     "karma": "2.0.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "minify-stream": "^1.1.0",
