--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "version": "0.0.1",
   "name": "hyperjs",
-  "private": true,
-  "main": "dist/hyperjs.min.js",
+  "private": false,
+  "main": "hyperjs.js",
+  "typings": "hyperjs.d.ts",
   "author": {
     "name": "Fredrik Olsson",
     "email": "fredrik.olsson2@outlook.com"
@@ -23,11 +24,11 @@
     "API",
     "HATEOAS",
     "hypertext",
-    "hypermedia",
-    "HAL"
+    "hypermedia"
   ],
   "devDependencies": {
     "@types/mocha": "^2.2.48",
+    "@types/sinon": "^4.3.1",
     "gulp": "^3.9.1",
     "karma": "2.0.0",
     "karma-chrome-launcher": "^2.2.0",
@@ -38,6 +39,7 @@
     "sinon": "^4.4.2",
     "tsify": "^3.0.4",
     "typescript": "2.7.2",
-    "vinyl-source-stream": "^2.0.0"
+    "vinyl-source-stream": "^2.0.0",
+    "dts-generator": "^2.1.0"
   }
 }
