--- a/.github/workflows/npm-build-test.yml
+++ b/.github/workflows/npm-build-test.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [20.x]
 
     steps:
     - uses: actions/checkout@v3
@@ -25,4 +25,5 @@ jobs:
     - name: Build
       run: |
         npm install
-        gulp
+        npm build
+        npm test
