--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "homepage": "https://github.com/fredolss/hyperjs",
   "license": "MIT",
   "scripts": {
-    "test": "gulp test",
-    "build": "gulp bundle"
+    "test": "jest",
+    "build": "node ./esbuild.mjs"
   },
   "keywords": [
     "JSON",
@@ -27,18 +27,20 @@
     "hypermedia"
   ],
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/mocha": "^2.2.48",
     "@types/sinon": "^4.3.1",
-    "gulp": "^3.9.1",
-    "karma": "2.0.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-mocha": "^1.3.0",
-    "minify-stream": "^1.1.0",
-    "mocha": "^5.0.4",
-    "sinon": "^4.4.2",
-    "tsify": "^3.0.4",
-    "typescript": "2.7.2",
-    "vinyl-source-stream": "^2.0.0",
-    "dts-generator": "^2.1.0"
+    "esbuild": "0.20.1",
+    "gulp": "^4.0.2",
+    "jest": "^29.7.0",
+    "karma-mocha": "^2.0.1",
+    "karma-typescript": "^5.5.4",
+    "minify-stream": "^2.1.0",
+    "mocha": "^10.3.0",
+    "sinon": "^17.0.1",
+    "ts-jest": "^29.1.2",
+    "tsify": "^5.0.4",
+    "typescript": "^5.3.3",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
