--- a/.github/workflows/npm-build-test.yml
+++ b/.github/workflows/npm-build-test.yml
@@ -25,5 +25,5 @@ jobs:
     - name: Build
       run: |
         npm install
-        npm build
-        npm test
+        npm run build
+        npm run test
